# halloc

./: CMakeLists.txt  DESIGN.md  README.md  tutorial.md
.cache/clangd/index/: halloc.cpp.1F743D64368F402A.idx  halloc.h.B74F8FAA5D3F7D20.idx  main.cpp.2A11211910A2458A.idx  main.cpp.5634B646BA14888D.idx  os.cpp.A7B008E8ACCF6009.idx  os.h.F33777DA03A3F7A4.idx  page_heap.cpp.23BB462281DE15C0.idx  page_heap.h.80729F862AF6DD1D.idx  size_class.h.A01C8FECA8A8C679.idx  span.cpp.650A620406CE8D67.idx  span.h.C6FA22A34FCCFF45.idx  stats.cpp.548020ECD4C65667.idx  stats.h.DDD75AA66BF509FB.idx  stress_main.cpp.BB74A10C68BB753D.idx  thread_cache.cpp.1721B3761C70E8DB.idx  thread_cache.h.9BF6F994A5980D12.idx
.sisyphus/: boulder.json
.sisyphus/notepads/halloc-system-design/: issues.md  learnings.md
.sisyphus/plans/: halloc-system-design.md  remote-free-path.md
benchmarks/: main.cpp  mt_stress.cpp
build-asan/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  compile_commands.json  halloc_bench  halloc_stress_tests  halloc_unit_tests
build-asan/Testing/Temporary/: CTestCostData.txt
build-bench/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  compile_commands.json  halloc_bench  halloc_mt_stress  halloc_stress_tests  halloc_unit_tests
build-bench/Testing/Temporary/: CTestCostData.txt
include/halloc/: halloc.h  os.h  page_heap.h  size_class.h  span.h  stats.h  thread_cache.h
src/: halloc.cpp  os.cpp  page_heap.cpp  span.cpp  stats.cpp  thread_cache.cpp
tests/: main.cpp  stress_main.cpp
